Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -372,7 +372,7 @@
     "top_canadian_city = top_travel_cities[-2]\n",
     "top_canadian_city\n",
     "\n",
-    "top_"
+    "top_canadian city"
    ]
   },
   {
