--- a/index.ipynb
+++ b/index.ipynb
@@ -724,25 +724,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'top_travel_cities' is not defined",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-82bd5f222420>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-ebfc38be71e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtop_travel_cities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'San Antonio'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtop_travel_cities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'top_travel_cities' is not defined"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-82bd5f222420>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    top_travel cities.pop\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "top_travel_cities.append('San Antonio')\n",
     "top_travel_cities\n",
-    "top_travel cities.pop"
+    "top_travel cities.pop\n"
    ]
   },
   {
